@@ -1,0 +1,11 @@
+fileFormatVersion: 2
+guid: b11836370ad13a742b0edc98aeea22f4
+MonoImporter:
+  externalObjects: {}
+  serializedVersion: 2
+  defaultReferences: []
+  executionOrder: 0
+  icon: {instanceID: 0}
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
